--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "mocha *.test.js",
-    "devStart": "nodemon index.js"
+    "testStart": "NODE_ENV=test node index.js",
+    "devStart": "cross-env NODE_ENV=developement nodemon index.js",
+    "test": "mocha *.test.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "cros": "^1.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.7",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "chai": "^5.1.2",
     "chai-http": "^5.1.1",
+    "cross-env": "^7.0.3",
     "mocha": "^10.8.2"
   }
 }
